# Medical-Access-LOD

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/fixtures/: facilities.csv  schedules.csv  services.csv
data/fixtures/expected/: sample.ttl
infra/: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: api-stack.ts  delivery-stack.ts  identity-stack.ts  monitoring-stack.ts  pipeline-stack.ts  storage-stack.ts
infra/test/: stacks.test.ts
lod/: README.md  ontology.ttl  shapes.ttl  statistics.json
ontology/: shapes.ttl
queries/: facilities_by_specialty.rq  saturday_pediatrics.rq  weekday_dermatology_open_at_18.rq
queries-real/: facilities_by_bbox.rq  facilities_by_specialty.rq  facilities_per_ward.rq  saturday_pediatrics.rq  search_by_specialty_name.rq  specialties_catalog.rq  weekday_dermatology_open_at_18.rq
src/medical_access_lod/: cli.py
src/medical_access_lod/application/: build_rdf.py  download_source.py  normalize_data.py  normalize_mhlw.py  publish_lod.py  validate_rdf.py
tests/fixtures/mhlw_sample/: NOTICE.txt  clinic_facility_info.csv  (+5 more)
tests/integration/: asl_simulator.py  test_pipeline_e2e.py  test_rdf.py  test_shacl.py  test_sparql.py
tests/unit/: test_api_handler.py  test_cleanup_handler.py  test_download.py  test_functions_contract.py  test_generation_catalog.py  test_generation_inventory.py  test_generation_retention.py  test_normalize.py  test_normalize_mhlw.py  test_pipeline_handlers.py  test_pipeline_lock.py
(+27 files in other folders)
