[project]
name = "medical-access-lod"
version = "0.1.0"
description = "千葉市の医療機関について診療科・診療時間・所在地を統合したLOD"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "CC-BY-4.0" }
authors = [{ name = "Medical Access LOD" }]
dependencies = [
    "aws-lambda-powertools[tracer]>=3.0",
    "boto3>=1.35",
    "rdflib>=7.1",
    "pyshacl>=0.29",
    "polars>=1.20",
    "pydantic>=2.9",
    "httpx>=0.28",
    "typer>=0.15",
]

[project.scripts]
medical-lod = "medical_access_lod.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "moto>=5.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/medical_access_lod"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["pyshacl.*", "rdflib.*", "polars.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
